--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -29,6 +29,22 @@ This is noma
 </div>
 
 <script>
+    function getCookie(name) {
+        var cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            var cookies = document.cookie.split(';');
+            for (var i = 0; i < cookies.length; i++) {
+                var cookie = cookies[i].trim();
+                // Does this cookie string begin with the name we want?
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+
     function handleFormTweetError(msg, display) {
         let myErrorDiv = document.getElementById('tweet-create-form-error')
         if(display === true) {
@@ -131,19 +147,53 @@ This is noma
     loadTweets(tweetsContainerElement)
     
 
-    function handleDidLike(tweet_id, current_count) {
+    function handleTweetActionBtn(tweet_id, current_count, action) {
         console.log(tweet_id, current_count)
+        const url = "/api/tweets/action/"
+        const method = "POST"
+        const data = JSON.stringify({
+            id: tweet_id,
+            action: action,
+        })
+
+        const xhr = new XMLHttpRequest()
+        const csrftoken = getCookie('csrftoken');
+        xhr.open(method, url)
+        xhr.setRequestHeader("Content-Type", "application/json")
+        xhr.setRequestHeader("HTTP_X_REQUEST_WITH", "XMLHttpRequest")
+        xhr.setRequestHeader("X-Requested-With", "XMLHttpRequest")
+        xhr.setRequestHeader("X-CSRFToken", csrftoken)
+        xhr.onload = function() {
+            // react js will handle the states much better
+            loadTweets(tweetsContainerElement)
+        }
+
+        xhr.send(data)
+
     }
 
+    function RetweetBtn(tweet) {
+        return "<button class='btn btn-outline-success btn-small' onclick=handleTweetActionBtn("
+        + tweet.id +"," + tweet.likes + ",'retweet')>Retweet</button>"
+    }
+
+    function unLikeBtn(tweet) {
+        return "<button class='btn btn-outline-primary btn-small' onclick=handleTweetActionBtn("
+        + tweet.id +"," + tweet.likes + ",'unlike')>Unlike</button>"
+    }
 
     function likeBtn(tweet) {
-        return "<button class='btn btn-primary btn-small' onclick=handleDidLike("+ tweet.id +"," + tweet.likes + ")>"+ tweet.likes +" Likes</button>"
+        return "<button class='btn btn-primary btn-small' onclick=handleTweetActionBtn("
+        + tweet.id +"," + tweet.likes + ",'like')>"+ tweet.likes +" Likes</button>"
     }
 
     function formatTweetElement(tweet) {
         let formattedTweet = "<div class='col-12 col-md-10 mx-auto border rounded py-3 mb-4 tweet' id='tweet-" + tweet.id 
         + "'><p>" + tweet.content + 
-        "</p><div class='btn-group'>" + likeBtn(tweet) + "</div></div>"
+        "</p><div class='btn-group'>" + likeBtn(tweet) + 
+            unLikeBtn(tweet) + 
+            RetweetBtn(tweet) + 
+        "</div></div>"
         return formattedTweet
     }
 </script>
